# ChangeLog for media-tv/kdetv
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/kdetv/ChangeLog,v 1.24 2006/07/09 05:56:38 flameeyes Exp $

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> kdetv-0.8.8-r1.ebuild:
  Pinpoint virtual/x11 version to less than 7.

  03 Jun 2006; Ioannis Aslanidis <deathwing00@gentoo.org> kdetv-0.8.8.ebuild,
  kdetv-0.8.8.ebuild:
  Fixed HOMEPAGE of ebuilds to match the new site.

  16 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> kdetv-0.8.8-r1.ebuild:
  Move the .desktop file in FDO's suggested directory.

  05 Feb 2006; Diego Pettenò <flameeyes@gentoo.org> kdetv-0.8.8-r1.ebuild:
  Make use of the new support in kde eclass to set the translations and
  documentation, this means that with empty $LINGUAS you'll get every
  translation instead. Add -fno-strict-aliasing as the code dereferences
  type-punned pointers.

  26 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/kdetv-0.8.8-bindnow.patch, kdetv-0.8.8-r1.ebuild:
  Add patch to link with non-lazy bindings kdetvv4lsetup binary.

  26 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> kdetv-0.8.8-r1.ebuild:
  Change Makefile.am and not Makefile.in as we have to re-run autotools anyway.

  12 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/kdetv-0.8.8-xinerama.patch, kdetv-0.8.8-r1.ebuild:
  Also remove check for XvMC and remove dependency as it's not used at all
  either.

  12 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/kdetv-0.8.8-xinerama.patch, kdetv-0.8.8-r1.ebuild:
  Add patch to disable xinerama checking and linking as it's not used at all
  (--as-needed dropped it, too).

*kdetv-0.8.8-r1 (03 Jan 2006)

  03 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/kdetv-0.8.5-lirc.patch, -kdetv-0.8.4.ebuild, -kdetv-0.8.5.ebuild,
  -kdetv-0.8.6.ebuild, -kdetv-0.8.7.ebuild, +kdetv-0.8.8-r1.ebuild:
  Drop old versions, add -r1 with modular x deps and zvbi as optional dependency.
