@@ -10,18 +10,18 @@ MD5 f817eaaa504ef394d2a89a04426d57ae files/kdetv-0.8.8-xinerama.patch 1629
 RMD160 624f944a178bba8c9bdf4891ed9ad66c834402bf files/kdetv-0.8.8-xinerama.patch 1629
 SHA256 3c2c5e2e34e825191c46d280a29603a78147a93b5e431b3bfd14bd95ef13aaf6 files/kdetv-0.8.8-xinerama.patch 1629
 DIST kdetv-0.8.8.tar.bz2 1184833 RMD160 a8b577baf2ced9d2eae4c72e3bf0bd026270b8e6 SHA1 b46e5e81d0669bcfcf1328d70fc4984a28adcbf5 SHA256 f1dc7b27f82f193888d9349b93692476cc3fdde34f3ade98823541badc0e7760
-EBUILD kdetv-0.8.8-r1.ebuild 1624 RMD160 12f38a59d59a56cbd317d60f0c9cccc051308f0b SHA1 75ea1b444f5c53b4958e04e7384f9f1bf4d29ebc SHA256 83d2b6bb2ca510f88c38e43c087ebdfa4c6340ffe2cb69a7fddd575e9ee977cb
-MD5 c1e4e23ab78b66b301123aa95fff13c1 kdetv-0.8.8-r1.ebuild 1624
-RMD160 12f38a59d59a56cbd317d60f0c9cccc051308f0b kdetv-0.8.8-r1.ebuild 1624
-SHA256 83d2b6bb2ca510f88c38e43c087ebdfa4c6340ffe2cb69a7fddd575e9ee977cb kdetv-0.8.8-r1.ebuild 1624
+EBUILD kdetv-0.8.8-r1.ebuild 1730 RMD160 aab29eed4fac014a62c16c7999b766c416e6a3f4 SHA1 329e4c7703ef7e18016974b394d7c51f14367a99 SHA256 d988274c0deacc2767d5f228e5c2b57b1f71282212840cfa2f4b1ba213962a99
+MD5 5a3012d17f9d81b5acbbd323d0115c35 kdetv-0.8.8-r1.ebuild 1730
+RMD160 aab29eed4fac014a62c16c7999b766c416e6a3f4 kdetv-0.8.8-r1.ebuild 1730
+SHA256 d988274c0deacc2767d5f228e5c2b57b1f71282212840cfa2f4b1ba213962a99 kdetv-0.8.8-r1.ebuild 1730
 EBUILD kdetv-0.8.8.ebuild 1184 RMD160 9ab558fc1793f98dd076193558dc61a3f1252ed6 SHA1 b34253ce8538edcbe665a9bd7a82e785a64b80e8 SHA256 d9848a8598e7041435330feebdd63ad2b88b65af7c0e4d569b6415dbef0d6f85
 MD5 ea87c62ba7dbdce5c38e2e21dfbc0016 kdetv-0.8.8.ebuild 1184
 RMD160 9ab558fc1793f98dd076193558dc61a3f1252ed6 kdetv-0.8.8.ebuild 1184
 SHA256 d9848a8598e7041435330feebdd63ad2b88b65af7c0e4d569b6415dbef0d6f85 kdetv-0.8.8.ebuild 1184
-MISC ChangeLog 3653 RMD160 6a990f6deaf9a661954252ecaad548330a0e1232 SHA1 e4e6371d6c5dc0c280e1459b6935435ef968bde7 SHA256 d38019d92b9236f875a7224c5e44f12cbde82249ab71f2a51b1d18712d4b66f3
-MD5 7342be63f45dea28b7580d5e9e4f7cb5 ChangeLog 3653
-RMD160 6a990f6deaf9a661954252ecaad548330a0e1232 ChangeLog 3653
-SHA256 d38019d92b9236f875a7224c5e44f12cbde82249ab71f2a51b1d18712d4b66f3 ChangeLog 3653
+MISC ChangeLog 3771 RMD160 f02ce0c50bd3c245ca4b164fdbfd757663af05b4 SHA1 2b8aab3a4a4d76b7bef3286a0b01434475f82ad0 SHA256 4bf3f0c1d4dd4abac3cd258d802959191a2d447db451997cae85109db7cc24d0
+MD5 a754727a1aea9f3e3b22605456b3542a ChangeLog 3771
+RMD160 f02ce0c50bd3c245ca4b164fdbfd757663af05b4 ChangeLog 3771
+SHA256 4bf3f0c1d4dd4abac3cd258d802959191a2d447db451997cae85109db7cc24d0 ChangeLog 3771
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -33,9 +33,9 @@ MD5 5cc4c57eeb5a6c0a23b1e9fd5aa9341b files/digest-kdetv-0.8.8-r1 241
 RMD160 3a6c0d10b05bbe041049f9b01a7c651156d5afce files/digest-kdetv-0.8.8-r1 241
 SHA256 75b5ddc6f03a829d7deb242880d633a80ff82d857a26d8e090fbd183a431eb6c files/digest-kdetv-0.8.8-r1 241
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.4 (GNU/Linux)
+Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFEsJqdAiZjviIA2XgRAvkIAKCP5g9ele/A8+hC9VHxTG/1GR274gCg6V+Z
-AYizxN+NJks4GKaq8ifLB20=
-=osIf
+iD8DBQFFGLjK2ZWR0Jhg/EsRAlH0AJ4y/G5ss8V1wmiIHoAwgXtw7lJneQCcCa02
+X7BTvXqENNo8xDMDey7C4v4=
+=KVlW
 -----END PGP SIGNATURE-----
