@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/kdetv/kdetv-0.8.8-r1.ebuild,v 1.9 2006/07/09 05:56:38 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/kdetv/kdetv-0.8.8-r1.ebuild,v 1.10 2006/09/26 05:20:56 tsunam Exp $
 
 LANGS="bg ca br da de cs cy el es et fi ga fr gl hu is it lt nb mt nl pa pl pt ro ru rw ta sr sv tr en_GB pt_BR zh_CN sr@Latn"
 LANGS_DOC="da et fr it nl pt ru sv"
@@ -49,7 +49,10 @@ PATCHES="${FILESDIR}/${P}-xinerama.patch
 src_compile() {
 	local myconf="$(use_enable arts) $(use_enable lirc kdetv-lirc)
 		$(use_with zvbi) $(use_with opengl gl)"
-
+	#Filtering the below on x86 for bug #145754	
+	if [ "$ARCH" == "x86" ]; then
+		filter-flags -fforce-addr
+	fi
 	append-flags -fno-strict-aliasing
 
 	export BINDNOW_FLAGS="$(bindnow-flags)"
