@@ -1,6 +1,9 @@
 # ChangeLog for media-tv/kdetv
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/kdetv/ChangeLog,v 1.24 2006/07/09 05:56:38 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/kdetv/ChangeLog,v 1.25 2006/09/26 05:20:56 tsunam Exp $
+
+  26 Sep 2006; Joshua Jackson <tsunam@gentoo.org> kdetv-0.8.8-r1.ebuild:
+  Filtering fforce-addr on x86 via bug #145754
 
   09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> kdetv-0.8.8-r1.ebuild:
   Pinpoint virtual/x11 version to less than 7.
